derive-impl/src/params/snapshots/mapstic_derive_impl__params__value__tests__negative_int_out_of_range.snap
---
source: derive-impl/src/params/value.rs
expression: error
---
Error {
    kind: Custom(
        "number too small to fit in target type",
    ),
    locations: [
        "params",
        "large_int",
    ],
    span: Some(
        Span,
    ),
}
